# pymel

./: .gitignore  .hgignore  CHANGELOG  CHANGELOG.rst  README  README.md  XMLS.py  __init__.py  anim.py  api.py  commandHelp  commandUI.rtf  commandsCreation  commandsEnhanced  commandsPrimitives  core.py  ctx.py  env.py  envparse.py  epydoc.cfg  exceptions.py  factories.py  fileSequence.py  fx.py  helpDocs.py  io.py  mayaDocsParser.py  mel2py.py  mellex.py  melparse.py  mypy.ini  mypyrun.ini  namedtuple.py  node.py  parser.out  parsetab.py  pluginFactory.py  pluginFactory1.py  pyNameParse.py  pyNameparse.py  (+17 more)
api/: __init__.py  allapi.py  conversions.py  wrappedtypes.py
core/: __init__.py  anim.py  animation.py  context.py  core.py  ctx.py  datatypes.py  effects.py  factories.py  general.py  io.py  language.py  maths.py  mcallbacks.py  mexceptions.py  model.py  modeling.py  node.py  nodetypes.py  other.py  pmcmds.py  pmtypes.py  render.py  rendering.py  runtime.py  system.py  ui.py  windows.py
docs/: Using_Python.html  api-objects.txt  class-tree.html  exceptions.OSError-class.html  help.html  identifier-index-A.html  identifier-index-B.html  identifier-index-C.html  identifier-index-D.html  identifier-index-E.html  identifier-index-F.html  identifier-index-G.html  identifier-index-H.html  identifier-index-I.html  identifier-index-J.html  identifier-index-K.html  identifier-index-L.html  identifier-index-M.html  identifier-index-N.html  identifier-index-O.html  identifier-index-P.html  identifier-index-Q.html  identifier-index-R.html  identifier-index-S.html  identifier-index-T.html  identifier-index-U.html  identifier-index-V.html  identifier-index-W.html  identifier-index-X.html  identifier-index-Y.html  identifier-index-Z.html  identifier-index-_.html  identifier-index.html  index.html  internalCmds.txt  maya.cmds-module.html  maya.cmds-pysrc.html  module-tree.html  os-module.html  os-pysrc.html  (+479 more)
examples/: AETemplates.py  __init__.py  customClasses.py  dagTools.py  example1.py  example2.py  pipeGen.py  setVertexColor.py  skel.ma  test_dagTools.py  test_nodes.py  test_trees.py  trees.py  (+3 more)
(+659 files in other folders)
