[tool.poetry]
name = "pymel"
version = "0.0.0"
description = "Python in Maya Done Right"
authors = ['Chad Dombrova', 'Paul Molodowitch', 'Olivier Renouard']
license = "BSD"
readme = "README.md"

repository = "https://github.com/Lumapictures/pymel"
homepage = "https://github.com/Lumapictures/pymel"

keywords=["maya", "mel", "3d", "graphics", "games", "VFX", "CG", "animation"]

packages = [
    { include = "pymel" },
]

[tool.poetry.dependencies]
python = "^2.7 || ^3.7"
future = ">=0.18"

[tool.poetry.dev-dependencies]
beautifulsoup4 = "^4.8.2"
pytest = "^5.3.5"
sphinx = ">=1.2.3,<1.3"

[tool.poetry.scripts]
ipymel = "pymel.tools.ipymel:main"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"
# this is the default pattern for matching tags, but excluding the leading 'v'.
# we could omit this if we started prefixing our tags with 'v'
pattern = '''
(?x)                                                (?# ignore whitespace)
^(?P<base>\d+\.\d+\.\d+)                            (?# e.g., v1.2.3)
(-?((?P<stage>[a-zA-Z]+)\.?(?P<revision>\d+)?))?    (?# e.g., beta-0)
(\+(?P<tagged_metadata>.+))?$                       (?# e.g., +linux)
'''

[build-system]
requires = ["poetry>=1.0.2", "poetry-dynamic-versioning"]
build-backend = "poetry.masonry.api"
